<resources>
    <string name="app_name">BootZip Creator</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="menu">Menu</string>
    <string name="video_preview_image">video preview image</string>
    <string name="play_pause_btn">Play or Pause button toggle</string>
    <string name="select_video">Select Video</string>
    <string name="start">Start</string>
    <string name="loop_selection_instruction_text">Select the looping part of the boot animation video, then tap Start.</string>
    <string name="cancel">Cancel</string>
    <string name="animation_width_height"><![CDATA[Animation Width & Height]]></string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="okay">OK</string>
    <string name="processing_video">Processing</string>
    <string name="close">Close</string>
    <string name="do_not_close_window">Don\'t close this windows while processing the task.</string>
    <string name="generated_success_message">✅ Successfully generated the boot animation file.</string>
    <string name="search_history">Search…</string>
    <string name="file_name">File Name:</string>
    <string name="size">Size:</string>
    <string name="path">Path:</string>
    <string name="created_at">Created at:</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="file_not_found">File not found</string>
    <string name="empty_generations">¯\\_(ツ)_/¯</string>
</resources>