<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="File Information"
        android:maxLines="2"
        android:layout_marginBottom="15dp"
        android:ellipsize="end"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="16sp"
                android:textColor="?attr/textColor"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/fileNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="16sp"
                android:textColor="?attr/textColor"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/fileSizeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textSize="16sp"
                android:textColor="?attr/textColor"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/filePathTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:textSize="16sp"
                android:textColor="?attr/textColor"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/createdAtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shareButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/share"
            app:icon="@drawable/baseline_share_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/red"
            app:icon="@drawable/baseline_delete_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/red"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>
</LinearLayout>