<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:background="?attr/backgroundColor"
        android:paddingVertical="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_wifi_protected_setup_24"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processing_video"
            android:fontFamily="@font/airstrike"
            android:textColor="?attr/textColor"
            android:textSize="25sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp">

        <ProgressBar
            android:id="@+id/circularProgressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/circular_progress_drawable" />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0%"
            android:textSize="20sp"
            android:textColor="?attr/textColor"
            tools:ignore="HardcodedText" />
    </FrameLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Extracting frames"
        android:gravity="center"
        android:textSize="17sp"
        android:padding="10dp"
        android:textColor="?attr/textColor"
        tools:ignore="HardcodedText"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/footerInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_not_close_window"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp" />
</LinearLayout>